# SpeakerEncoder

./: .gitignore  FIX_SUMMARY.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  SETUP_SUMMARY.md  TEST_TROUBLESHOOTING.md  config.py  download_model.py  evaluate.py  prepare_data.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.bat  run_tests.sh  setup.py  setup_tests.bat  setup_tests.sh  train.py  validate_speakers.py
.github/workflows/: python-package.yml
data/: augmentations.py  dataset.py  preprocessor.py  sampler.py
model/: cadence_branch.py  encoder.py  fusion.py  loss.py  ssl_branch.py  timbre_branch.py
tests/: conftest.py  test_data.py  test_model.py  test_package.py  test_train.py
train/: dataloader.py
utils/: audio_utils.py
